<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">ARETE POP</string>
	<string name="clean_screen">Clear List</string>
	<string name="start_read_tags">Start Reading</string>
	<string name="parameter_read_tags">Parameter for Reading Tags (0 means unlimited)</string>
	<string name="shortzero">00</string>
	<string name="zero">0000</string>
	<string name="longzero">00000000</string>
	<string name="lzero">0000000000</string>
	<string name="tags">tags</string>
	<string name="seconds">seconds</string>
	<string name="cycles">cycles</string>
	<string name="menu">Additional Functions</string>
	<string name="stop_auto_read">Stop Read</string>
	<string name="back">back</string>
	<string name="password">password (hex)</string>
	<string name="address">start address</string>
	<string name="memory">target memory</string>
	<string name="length">length (word)</string>
	<string name="data">data (hex)</string>
	<string name="read">read</string>
	<string name="write">write</string>
	<string name="blockwrite">blockwrite</string>
	<string name="blockerase">blockerase</string>
	<string name="mask">mask (10 bits)</string>
	<string name="action">action (10 bits)</string>
	<string name="lock">lock</string>
	<string name="recom">Recom. (8 bits hex)</string>
	<string name="kill">kill</string>
	<string name="target_memory">RFU</string>
	<string name="region">Region</string>
	<string name="korea">Korea</string>
	<string name="channel">Channel (16bit hex)</string>
	<string name="power_level">Tx power level</string>
	<string name="modulation">Modulation</string>
	<string name="blf">BLF</string>
	<string name="rxmod">RxMod</string>
	<string name="dr">DR</string>
	<string name="set">set</string>
	<string name="reset">Default Setting</string>
	<string name="log">log</string>
	<string name="logfile">log.txt</string>
	<string name="start_log">start</string>
	<string name="stop_log">stop</string>
	<string name="cw_on">turn tx_cw on</string>
	<string name="cw_off">turn tx_cw off</string>
	<string name="nativecmd">write packet</string>
	<string name="send">send</string>
	<string name="change">change</string>
	<string name="comport">Com Port</string>
	<string name="defaultcom">/dev/ttyUSB0</string>
	<string name="get_info">Get Reader Info.</string>
	<string name="sample_command">BB 00 36 00 05 02 00 00 00 00 7E</string>
	<string name="readtime">RT</string>
	<string name="idletime">IT</string>
	<string name="sensetime">CST</string>
	<string name="rfl">RFL</string>
	<string name="fh">FH</string>
	<string name="lbt">LBT</string>
	<string name="cw">CW</string>
	<string name="m">M</string>
	<string name="trext">TRext</string>
	<string name="sel">Sel</string>
	<string name="session">Session</string>
	<string name="target">Target</string>
	<string name="q">Q</string>
	<string name="region_cmd">Set Region</string>
	<string name="channel_cmd">Set RF Channel</string>
	<string name="modulation_cmd">Set Modulation</string>
	<string name="signal_cmd">RF CW Signal Control</string>
	<string name="power_cmd">RF Transmitter Control</string>
	<string name="lbt_cmd">FH and LBT Setting</string>
	<string name="query_cmd">Query Parameters</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="menu_settings">Settings</string>
	<string name="Open">Off</string>
	<string name="Opened">On</string>
	<string name="Read">Read</string>
	<string name="Clear">Clear</string>
	<string name="Stop">Stop</string>
	<string name="Warnning_open">Please Open</string>
	<string name="menu_listclear">Clear</string>
	<string name="alert_msg_exit">ARETE POP app EXIT? Yes/No</string>
	<string name="msg_yes">Yes</string>
	<string name="msg_no">No</string>
	<string name="title_activity_web">WebActivity</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="title_activity_setting">SettingActivity</string>
	<string name="title_activity_setting_tab1">SettingActivityTab1</string>
	<string name="title_activity_setting_tab2">SettingActivityTab2</string>
	<string name="title_activity_intro_">Intro_Activity</string>
	<string name="title_activity_splash">SplashActivity</string>
	<string name="title_activity_tag_memory">TagMemoryActivity</string>
	<string name="title_activity_option">OptionActivity</string>
	<string name="title_activity_pop_settingctivity">PopSettingctivity</string>
	<string name="title_activity_po_psetting">PoPsettingActivity</string>
	<string name="title_activity_pop_setting">PopSettingActivity</string>
	<string name="title_activity_app_setting">AppSettingActivity</string>
	<string name="title_activity_pop_information">PopInformationActivity</string>
	<string name="actionbar_activity_not_found">Failed to open intent...</string>
	<string name="title_activity_tag_access">TagAccessActivity</string>
	<string name="title_activity_read">ReadActivity</string>
	<string name="title_activity_on_off_time">OnOffTimeActivity</string>
	<string name="title_activity_out_put_power">OutPutPowerActivity</string>
	<string name="title_activity_stop_condisions">StopCondisionsActivity</string>
	<string name="title_activity_lock">LockActivity</string>
	<string name="title_activity_kill">KillActivity</string>
	<string name="textOn">ON</string>
	<string name="textOff">OFF</string>
	<string name="title_activity_channel">ChannelActivity</string>
	<string name="title_activity_test">TestActivity</string>

</resources>