<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tagmemory_tab_kill"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <TableRow>

        <TextView
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/password"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/password3"
            android:layout_weight="3"
            android:hint="@string/longzero"
            android:textSize="12sp" />
    </TableRow>

    <TableRow>

        <TextView android:textSize="16sp" />
    </TableRow>

    <TableRow>

        <TextView android:layout_weight="1" />

        <Button
            android:id="@+id/kill_tag"
            android:layout_weight="3"
            android:text="@string/kill" />
    </TableRow>

</TableLayout>